# liboauth_lite

./: .gitignore  CMakeLists.txt  README.md  library.c  library.h  main.c
distr/: oauth.h  oauth_lite.h
src/: base64.c  base64.h  crypt.c  crypt.h  library.h  memxor.c  memxor.h  oauth.c  oauth.h  sha1.c  sha1.h  xmalloc.c  xmalloc.h
